--- a/_config.yml
+++ b/_config.yml
@@ -10,9 +10,9 @@
 locale                   : "en-US"
 title                    : "Mehedi Hasan's Portfolio"
 title_separator          : "-"
-name                     : &name "Your Name"
+name                     : &name "Mehedi Hasan Mun"
 description              : &description "personal description"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://mehedihasan-cse.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
 
@@ -22,7 +22,7 @@ repository               : "academicpages/academicpages.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  name             : "Mehedi Hasan Mun"
   pronouns         : # example: "she/her"  
   bio              : "Short biography for the left-hand sidebar"
   location         : "Earth"
