--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,7 +16,7 @@ main:
     url: /year-archive/
     
   - title: "CV"
-    url: /pages/ML Engineer-CV-Mehedi Hasan.pdf/
+    url: /ML Engineer-CV-Mehedi Hasan.pdf/
     
   - title: "Guide"
     url: /markdown/
