--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,7 +16,8 @@ main:
     url: /year-archive/
     
   - title: "CV"
-    url: /ML Engineer-CV-Mehedi Hasan.pdf/
+    #url: /ML Engineer-CV-Mehedi Hasan.pdf/
+    url: /_pages/ML Engineer-CV-Mehedi Hasan.pdf/
     
   - title: "Guide"
     url: /markdown/
