--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -17,7 +17,7 @@ main:
     
   - title: "CV"
     #url: /ML Engineer-CV-Mehedi Hasan.pdf/
-    url: /_pages/ML Engineer-CV-Mehedi Hasan.pdf/
+    url: /files/Never Give up!.png/
     
   - title: "Guide"
     url: /markdown/
