--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,8 +16,8 @@ main:
     url: /year-archive/
     
   - title: "CV"
-    #url: /ML Engineer-CV-Mehedi Hasan.pdf/
-    url: /files/Never Give up!.png
+    #url: /
+    url: /files/ML Engineer-CV-Mehedi Hasan.pdf
     
   - title: "Guide"
     url: /markdown/
