--- a/_config.yml
+++ b/_config.yml
@@ -242,7 +242,7 @@ defaults:
       path: ""
       type: Recent Projects
     values:
-      layout: talk
+      layout: Recent Projects
       author_profile: true
       share: true
 
